--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "dotenv": "^16.4.5",
     "express.js": "^1.0.0",
     "mongoose": "^8.4.0",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
